k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: t24-service
  namespace: ${NAMESPACE}
  labels:
    app: t24-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: 'nlb'
    service.beta.kubernetes.io/aws-load-balancer-scheme: 'internet-facing'
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
    - port: 443
      targetPort: 8080
      protocol: TCP
      name: https
  selector:
    app: t24-service
---
apiVersion: v1
kind: Service
metadata:
  name: t24-service-internal
  namespace: ${NAMESPACE}
  labels:
    app: t24-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: t24-service
